--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 <body>
 <h1 style="font-size:40pt">iOS应用OTA安装<h1/>
 <h1 style="font-size:40pt">
-<a title="iPhone" href="itms-services://?action=download-manifest&url=https://github.com/ioscn/DisApplication/plist/info.plist">Iphone Download</a>
+<a title="iPhone" href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/ioscn/DisApplication/main/plist/info.plist">Iphone Download</a>
 <!-- 
 <h1/>
 <a title="iPhone" href="https://192.168.**.***/ca.crt">ssl 证书安装</a>
